--- a/corrida/templates/ordenes/produccion.html
+++ b/corrida/templates/ordenes/produccion.html
@@ -40,8 +40,7 @@
                         {%endif%}
                         <td class="text-center"> <b> {{elemento.num_bloques}}/{{elemento.cantidad}} </b></td>
                        
-                        <td><a class="btn btn-primary" href="{% url 'corrida:producir_bloques' elemento.corrida_id  elemento.id %}" role="button"> Selecionar </a> 
-                        </td>
+                        <!-- <td><a class="btn btn-primary" href="{% url 'corrida:producir_bloques' elemento.corrida_id  elemento.id %}" role="button"> Selecionar </a> </td> -->
                     {%else%}
                     <tr >
 
@@ -54,8 +53,7 @@
                         {%endif%}
                         <td class="text-center"> <b> {{elemento.num_bloques}}/{{elemento.cantidad}} </b></td>
                        
-                        <td><a class="btn btn-primary" href="{% url 'corrida:producir_bloques' elemento.corrida_id  elemento.id %}" role="button"> Selecionar </a> 
-                        </td>
+                        <!-- <td><a class="btn btn-primary" href="{% url 'corrida:producir_bloques' elemento.corrida_id  elemento.id %}" role="button"> Selecionar </a> </td> -->
                     </tr>
                     {%endif%}
                     {% endfor %}
@@ -164,28 +162,69 @@
             <div class="row">
                 
                     
-                <div class="col-7 offset-1">
-                        {% if bloqueMedidas.tipo_de_unidad.tipo_de_unidad == 'Inicio' or bloqueMedidas.tipo_de_unidad.tipo_de_unidad == 'Cambio' %}
-                    <select id="opciones" name="selector">
-                        {% for opcion in opciones %}
-                    <option value="{{opcion.id}}">{{opcion}}</option>å
-                        {% endfor %}
-                    </select>
-                    <input type="submit" class="btn btn-success" value="Elegir Block" name="opcion">
-                        {% endif %}
-                        {% if bloqueMedidas.tipo_de_unidad.tipo_de_unidad == 'Normal' %}
-                    <input type="submit" class="btn btn-success" value="Siguiente Block" name="siguiente">
-                    
-                    <!-- if de hidden button  -->
-                    <input type="submit" class="btn btn-info" value="Cambio" name="cambio">
-                    <input type="submit" class="btn btn-warning" value="Terminar Corrida" name="final" >
-                        {% endif %}
-
+                <div class="col-7 offset-3">
+                {% if primer_bloque %}
+                    <input type="submit" class="btn btn-success" value="Capturar bloque Inicio" name="inicio">
+                {% else %}
+                    <input type="submit" class="btn btn-success" value="Normal" name="siguiente">
+                    {% if multiples_elementos %}
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cambioModal">
+                        Cambio
+                    </button>
+                    {% endif %}
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#finalModal">
+                        Final
+                    </button>
+                {% endif %}
                 </div>
-                <div class="col-3">
-                        <a class="btn btn-danger" href = "#" role="button"> Cancelar Corrida  </a>
-                </div>
-                        
+                <!-- Modal Cambio -->
+                <div class="modal fade" id="cambioModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLongTitle">Elige el siguiente tipo de espuma</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="align-middle">
+                                <select id="opciones" name="selector" >
+                                {% for opcion in opciones %}
+                                    <option value="{{opcion.id}}">{{opcion}}</option>
+                                {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                          <input type="submit" class="btn btn-success" value="Confirmar" name="opcion">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Modal Terminar corrida -->
+                  <div class="modal fade" id="finalModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLongTitle">Terminar Corrida</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="align-middle">
+                            Estas seguro?
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                          <input type="submit" class="btn btn-success" value="Confirmar" name="final">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </form>
                     
             </div>
