--- a/espumas/templates/espumas/espumas.html
+++ b/espumas/templates/espumas/espumas.html
@@ -21,7 +21,7 @@
             <th class="text-center align-middle">Familia</th> 
             <th class="text-center align-middle">Forma</th> 
             <!-- <th class="text-center align-middle">Borrar </th> -->
-            <th class="text-center align-middle">Agregar a Corrida</th>
+            <th class="text-center align-middle ">Agregar a Corrida</th>
           </tr>
         </thead>
         <tbody>
@@ -32,7 +32,11 @@
             <td class="text-center align-middle" >{{ bloque.familia_de_medidas }}</td>
             <td class="text-center align-middle" >{{ bloque.forma }}</td>
             <!-- <td class="text-center align-middle" ><a class="btn btn-danger" href="{% url 'espumas:borrar_medidas' bloque.id %}" role="button"> Borrar </a></td> -->
-            <td class="text-center align-middle" ><a class="btn btn-success" href="{% url 'corrida:agregar_a_corrida' bloque.id  %}" role="button"> Agregar A Corrida </a></td>
+                {% if conflicto %}
+                <td class="text-center align-middle " ><a class="btn btn-secondary disabled" href="{% url 'corrida:agregar_a_corrida' bloque.id  %}" role="button"> No es posible agregar </a></td>
+                {% else %}
+                <td class="text-center align-middle" ><a class="btn btn-success" href="{% url 'corrida:agregar_a_corrida' bloque.id  %}" role="button"> Agregar A Corrida </a></td>
+                {% endif %}
             {% endfor %}
         </tr>
         </tbody>
