--- a/corrida/templates/ordenes/corrida_producida.html
+++ b/corrida/templates/ordenes/corrida_producida.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h1 class="text-primary">
-  <b>Resumen de Espumado</b>
-</h1> 
-
+<br>
+<h1 class="text-Left text-primary"> <b> Resumen de Espumado </b></h1>
+<br>
 <table class="table table-striped table-sm">
         <thead>
           <tr>
+            <th class="text-center" scope="col">Bloques Totales</th>
             <th class="text-center" scope="col">Bloques Normales</th>
             <th class="text-center" scope="col">Bloques OK</th>
             <th class="text-center" scope="col">Bloque NG</th>
@@ -21,6 +20,7 @@
         </thead>
         <tbody>
           <tr>
+            <td class="text-center">{{resumen.bloques_totales}}</td>
             <td class="text-center">{{resumen.bloques_normales}}</td>
             <td class="text-center">{{resumen.bloques_ok}}</td>
             <td class="text-center">{{resumen.bloques_ng}}</td>
@@ -34,12 +34,14 @@
         </tbody>
 </table>
 <br>
-
+<h1 class="text-Left text-primary"> <b> Resumen por Tipo de Espuma </b></h1>
+<br>
 {% for resumen_tde in resumenes_por_tde %}
-  <h3 class="text-info">{{resumen_tde.tde}}</h3>
+  <!-- <h3 class="text-info">{{resumen_tde.tde}}</h3> -->
     <table class="table table-striped table-sm">
       <thead>
         <tr>
+          <th class="text-center" scope="col">Tipo de Espuma</th>
           <th class="text-center" scope="col">Bloques normales</th>
           <th class="text-center" scope="col">Bloques OK</th>
           <th class="text-center" scope="col">Bloques NG</th>
@@ -54,6 +56,7 @@
       </thead>
       <tbody>
         <tr>
+          <td class="text-center text-info"><b> {{resumen_tde.tde}}</b> </td>
           <td class="text-center">{{resumen_tde.normales_count}}</td>
           <td class="text-center">{{resumen_tde.ok_count}}</td>
           <td class="text-center">{{resumen_tde.ng_count}}</td>
@@ -68,9 +71,10 @@
       </tbody>
     </table>
 {% endfor %}
-<h2 class="text-primary">
-  Bloques Producidos
-</h2>
+
+<br>
+<h1 class="text-Left text-primary"> <b> Bloques Producidos </b></h1>
+<br>
 <table class="table table-striped table-sm">
         <thead>
           <tr>
