--- a/espumas/templates/index.html
+++ b/espumas/templates/index.html
@@ -53,7 +53,7 @@
 											<h2>Ordenes Producidas</h2>
 											
 											<p>Para ver las ordenes producidas entre aquí.</p>
-											<p><a class="btn btn-primary" href="{% url 'corrida:corridas_producidas' %}" role="button"> Ver Inventario &raquo;</a></p>
+											<p><a class="btn btn-primary" href="{% url 'corrida:corridas_producidas' %}" role="button"> Ver Ordenes Producidas &raquo;</a></p>
 										</div>
 									</div>
 
@@ -63,12 +63,12 @@
 												<div class="col-md-4">
 													<h2> Inventario </h2>
 													<p> Para ver inventario, generar reportes o buscar una pieza entre aquí.</p>
-													<p><a class="btn btn-primary" href="{% url 'corrida:inventario' %}" role="button">Capturar Cilindros  &raquo;</a></p>
+													<p><a class="btn btn-primary" href="{% url 'corrida:inventario' %}" role="button">Ver Inventario  &raquo;</a></p>
 												</div>
 												<div class="col-md-4">
 													<h2> DashBoard</h2>
 													<p> Para ver el DashBoard de producion de espuma entra aquí.</p>
-													<p><a class="btn btn-primary" href="{% url 'corrida:dashboard' %}" role="button">Capturar Bloques &raquo;</a></p>
+													<p><a class="btn btn-primary" href="{% url 'corrida:dashboard' %}" role="button">Ver DashBoard &raquo;</a></p>
 												</div>
 												<div class="col-md-4">
 													<h2> Bloques disponibles </h2>
@@ -81,9 +81,9 @@
 
 											<div class="row">
 														<div class="col-md-4">
-															<h2>Reportar fallas</h2>
-															<p> Para generar un reporte de fallas en una maquina entra aquí.</p>
-															<p><a class="btn btn-primary" href="#" role="button">Reportar fallas &raquo;</a></p>
+															<h2>Laboratorio</h2>
+															<p> Aqui se aprueban las pruebas de Laboratorio</p>
+															<p><a class="btn btn-primary" href="{% url 'corrida:lotes' %}" role="button">Ir A Laboratorio &raquo;</a></p>
 														</div>
 														<div class="col-md-4">
 															<h2>Reportes de Fallas</h2>
