--- a/corrida/templates/ordenes/ordenes_pendientes.html
+++ b/corrida/templates/ordenes/ordenes_pendientes.html
@@ -79,8 +79,8 @@
             {% for elementoCorrida in corrida.elementocorrida_set.all %}
 
             <tr>
-                <td class="text-center" >{{ elementoCorrida.corrida }}</td>
-                <td class="text-center" >{{ elementoCorrida.bloqueMedidas.tipo_de_espuma }}</td>
+                <td class="text-center" >{{ elementoCorrida.corrida_id }}</td>
+                <td class="text-center" >{{ elementoCorrida.bloqueMedidas.tipo_de_espuma.tipo_de_espuma }}</td>
                 <td class="text-center" >{{ elementoCorrida.bloqueMedidas.descripcion }}</td>
                 <td class="text-center" >{{ elementoCorrida.bloqueMedidas.tipo_de_unidad }}</td>
                 <td class="text-center" >{{ elementoCorrida.bloqueMedidas.forma }}</td>
