--- a/corrida/templates/ordenes/inventario.html
+++ b/corrida/templates/ordenes/inventario.html
@@ -3,22 +3,13 @@
  
 <br>
 <br>
-<div class="container">
-        <div class="row">
-            <div class="col-6 offset-3 ">
-                    <h1 class="text-center my_title text-large text-primary" > <b>  Inventario </h1>  </b>
-<br>
-            </div>
-        </div>
-</div>
-
+<h1 class="text-center text-secondary"> <b>  Inventario </b></h1>
 <div class="container">
     <div class="row">
         <div class="col-8 offset-2 ">
     {% for tipo_con_medidas in tipos_con_medidas %} 
 <br>
-    <h3 class="text-center my_title text-info">Bloques disponibles para el TDE: <span class="badge badge-primary badge-pill">{{tipo_con_medidas.tipo_de_espuma}} </span> </h3>
-<br>
+    <h3 class="text-left text-info">Bloques disponibles para el TDE: <span class="badge badge-primary badge-pill">{{tipo_con_medidas.tipo_de_espuma}} </span> </h3>
     <table class="table table-striped table-sm" style="padding: 5rem">
             <thead>
             <tr>
@@ -35,7 +26,7 @@
                     {% endfor %}
             </tbody>
     </table>
-<br>
+
     {% endfor %}
         </div>
     </div>  
